@@ -347,7 +347,7 @@ module Devise
 
   # Generate a friendly string randomically to be used as token.
   def self.friendly_token
-    ActiveSupport::SecureRandom.base64(15).tr('+/=', '-_ ').strip.delete("\n")
+    ActiveSupport::SecureRandom.base64(44).tr('+/=', 'xyz')
   end
 end
 
